# UnicodeToUtf8Lib

./: CMakeLists.txt  LICENSE  README.md
libs/unicode_to_utf8/include/: sqlsimpleAPI.h  unicode_to_utf8_trans.h
reference/UnicodeToUtfLibSrc/: CMakeLists.txt  README.md
reference/UnicodeToUtfLibSrc/include/: sqlsimpleAPI.h  unicode_to_utf8_trans.h
reference/UnicodeToUtfLibSrc/reference/sql/: Makefile  README.md
reference/UnicodeToUtfLibSrc/reference/sql/src/: sqlsimpleAPI.cpp  sqlsimpleAPI.h
reference/UnicodeToUtfLibSrc/src/: sqlsimpleAPI.cpp  unicode_to_utf8_trans.cpp
src/: main.cpp
